--- a/notebooks/Telco-customer-churn-ICP4D.ipynb
+++ b/notebooks/Telco-customer-churn-ICP4D.ipynb
@@ -27,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --user watson-machine-learning-client --upgrade | tail -n 1"
+    "!pip install --user watson-machine-learning-client --upgrade | tail -n 1\n",
+    "!pip install --user pyspark==2.3.3 --upgrade|tail -n 1"
    ]
   },
   {
@@ -38,11 +39,11 @@
     "We'll load our data as a pandas data frame.\n",
     "\n",
     "* Highlight the cell below by clicking it.\n",
-    "* Click the `10/01` \"Find data\" icon in the upper right of the notebook.\n",
-    "* If you are using the [ICP4D Learning Path] and have the [Virtualized data], begin by choosing the `Remote` tab. Then choose your virtualized data (i.e. User<xyz>.billingProductCustomers), click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
-    "* If you are using this code pattern outside of the [ICP4D Learning Path], add the locally uploaded file `Telco-Customer-Churn.csv` by choosing the 'Local` tab. Then choose the `Telco-Customer-Churn.csv`, click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
+    "* Click the 10/01 \"Find data\" icon in the upper right of the notebook.\n",
+    "* If you are using [Virtualized data](https://github.com/IBM/cloudpakfordata-telco-churn-workshop/blob/master/workshop/exercise-1/README.md), begin by choosing the `Files` tab. Then choose your virtualized data (i.e. User<xyz>.BILLINGPRODUCTCUSTOMERS), click Insert to code and choose Insert Pandas DataFrame.\n",
+    "* If you are using this notebook without virtualized data, add the locally uploaded file WA_Fn-UseC_-Telco-Customer-Churn.csv by choosing the `Files` tab. Then choose the `Telco-Customer-Churn.csv` file. Click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
     "* The code to bring the data into the notebook environment and create a Pandas DataFrame will be added to the cell below.\n",
-    "* Run the cell\n"
+    "* Run the cell"
    ]
   },
   {
@@ -51,14 +52,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Place cursor below and insert the Pandas DataFrame for the Telco churn data\n"
+    "import pandas as pd\n",
+    "# Place cursor below and insert the Pandas DataFrame for the Telco churn data\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll use the Pandas naming convention `df` for our DataFrame.  Make sure that the cell below uses the name for the dataframe used above, i.e df1, df2,... dfX for the remote data using Data Virtualization, or df_data1, df_data2, ... if using local data."
+    "We'll use the Pandas naming convention `df` for our DataFrame.  Make sure that the cell below uses the name for the dataframe used above. For the locally uploaded file it should look like `df_data_1` or `df_data_2` or `df_data_x`.\n",
+    "For the virtualized data case it should look like `data_df_1` or `data_df_2` or `data_df_x`."
    ]
   },
   {
@@ -67,7 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = df1\n",
+    "# for virtualized data\n",
+    "# df = data_df_1\n",
+    "\n",
+    "# for local upload\n",
     "df = df_data_1"
    ]
   },
@@ -117,7 +124,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_col = pd.to_numeric(df.iloc[:, 18], errors='coerce')\n",
+    "totalCharges = df.columns.get_loc(\"TotalCharges\")\n",
+    "print(totalCharges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_col = pd.to_numeric(df.iloc[:, totalCharges], errors='coerce')\n",
     "new_col"
    ]
   },
@@ -134,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[:, 18] = pd.Series(new_col)\n",
+    "df.iloc[:, totalCharges] = pd.Series(new_col)\n",
     "df"
    ]
   },
@@ -288,21 +305,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "totalCharge  = df.columns.get_loc(\"TotalCharges\")\n",
-    "print(nan_column)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Set up plot size\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "\n",
     "# Attributes destribution\n",
-    "a = sns.boxplot(orient=\"v\", palette=\"hls\", data=df.iloc[:, totalCharge], fliersize=14)\n"
+    "a = sns.boxplot(orient=\"v\", palette=\"hls\", data=df.iloc[:, totalCharges], fliersize=14)\n"
    ]
   },
   {
@@ -312,7 +319,7 @@
    "outputs": [],
    "source": [
     "# Total Charges data distribution\n",
-    "histogram = sns.distplot(df.iloc[:, totalCharge], hist=True)\n",
+    "histogram = sns.distplot(df.iloc[:, totalCharges], hist=True)\n",
     "plt.show()"
    ]
   },
@@ -343,7 +350,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "monthly = df.columns.get_loc(\"MonthlyCharges\")\n",
     "print(monthly)"
    ]
@@ -357,14 +363,6 @@
     "# Monthly Charges data distribution\n",
     "histogram = sns.distplot(df.iloc[:, monthly], hist=True)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Understand Data Distribution¶\n"
    ]
   },
   {
@@ -547,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = \"myname model\""
+    "MODEL_NAME = \"my-model my-date\""
    ]
   },
   {
@@ -563,10 +561,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dsx_ml.ml import save\n",
+    "from watson_machine_learning_client import WatsonMachineLearningAPIClient\n",
     "\n",
-    "save(name=MODEL_NAME, model=model, test_data=test_data, algorithm_type='Classification',\n",
-    "     description='This is a SparkML Model to Classify Telco Customer Churn Risk')"
+    "wml_credentials = {\n",
+    "                   \"url\": \"https://zen-cpd-zen.apps.os-workshop-nov22.vz-cpd-nov22.com\",\n",
+    "                   \"username\": \"*****\",\n",
+    "                   \"password\" : \"*****\",\n",
+    "                   \"instance_id\": \"wml_local\",\n",
+    "                   \"version\" : \"2.5.0\"\n",
+    "                  }\n",
+    "\n",
+    "client = WatsonMachineLearningAPIClient(wml_credentials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.spaces.list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the desired space as the `default_space`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.set.default_space('*******')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store our model\n",
+    "model_props = {client.repository.ModelMetaNames.NAME: MODEL_NAME,\n",
+    "               client.repository.ModelMetaNames.RUNTIME_UID : \"spark-mllib_2.3\",\n",
+    "               client.repository.ModelMetaNames.TYPE : \"mllib_2.3\"}\n",
+    "published_model = client.repository.store_model(model=model, pipeline=pipeline, meta_props=model_props, training_data=train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use this cell to do any cleanup of previously created models and deployments\n",
+    "client.repository.list_models()\n",
+    "client.deployments.list()\n",
+    "\n",
+    "# client.repository.delete('GUID of stored model')\n",
+    "# client.deployments.delete('GUID of deployed model')\n"
    ]
   },
   {
@@ -583,7 +640,7 @@
    "outputs": [],
    "source": [
     "write_score_CSV=test_data.toPandas().drop(['Churn'], axis=1)\n",
-    "write_score_CSV.to_csv('../datasets/TelcoCustomerSparkMLBatchScore.csv', sep=',', index=False)"
+    "write_score_CSV.to_csv('/project_data/data_asset/TelcoCustomerSparkMLBatchScore.csv', sep=',', index=False)"
    ]
   },
   {
@@ -600,7 +657,7 @@
    "outputs": [],
    "source": [
     "write_eval_CSV=test_data.toPandas()\n",
-    "write_eval_CSV.to_csv('../datasets/TelcoCustomerSparkMLEval.csv', sep=',', index=False)"
+    "write_eval_CSV.to_csv('/project_data/data_asset/TelcoCustomerSparkMLEval.csv', sep=',', index=False)"
    ]
   },
   {
@@ -613,7 +670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
