Better notebook instructions.
Document different `insert to cell` code for local
vs. virtualized data.

--- a/notebooks/Telco-customer-churn-ICP4D.ipynb
+++ b/notebooks/Telco-customer-churn-ICP4D.ipynb
@@ -39,11 +39,11 @@
     "We'll load our data as a pandas data frame.\n",
     "\n",
     "* Highlight the cell below by clicking it.\n",
-    "* Click the 10/01 \"Find data\" icon in the upper right of the notebook.\n",
-    "* If you are using [Virtualized data](https://github.com/IBM/cloudpakfordata-telco-churn-workshop/blob/master/workshop/exercise-1/README.md), begin by choosing the `Files` tab. Then choose your virtualized data (i.e. User<xyz>.BILLINGPRODUCTCUSTOMERS), click Insert to code and choose Insert Pandas DataFrame.\n",
-    "* If you are using this notebook without virtualized data, add the locally uploaded file WA_Fn-UseC_-Telco-Customer-Churn.csv by choosing the `Files` tab. Then choose the `Telco-Customer-Churn.csv` file. Click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
+    "* Click the `10/01` \"Find data\" icon in the upper right of the notebook.\n",
+    "* If you are using Virtualized data, begin by choosing the `Files` tab. Then choose your virtualized data (i.e. MYSCHEMA.BILLINGPRODUCTCUSTOMERS), click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
+    "* If you are using this notebook without virtualized data, add the locally uploaded file `Telco-Customer-Churn.csv` by choosing the `Files` tab. Then choose the `Telco-Customer-Churn.csv`. Click `Insert to code` and choose `Insert Pandas DataFrame`.\n",
     "* The code to bring the data into the notebook environment and create a Pandas DataFrame will be added to the cell below.\n",
-    "* Run the cell"
+    "* Run the cell\n"
    ]
   },
   {
@@ -52,17 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "# Place cursor below and insert the Pandas DataFrame for the Telco churn data\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll use the Pandas naming convention `df` for our DataFrame.  Make sure that the cell below uses the name for the dataframe used above. For the locally uploaded file it should look like `df_data_1` or `df_data_2` or `df_data_x`.\n",
-    "For the virtualized data case it should look like `data_df_1` or `data_df_2` or `data_df_x`."
+    "We'll use the Pandas naming convention df for our DataFrame. Make sure that the cell below uses the name for the dataframe used above. For the locally uploaded file it should look like df_data_1 or df_data_2 or df_data_x. For the virtualized data case it should look like data_df_1 or data_df_2 or data_df_x."
    ]
   },
   {
@@ -115,7 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Convert TotalCharges column to numeric as it is detected as object"
+    "### 2.3 Check for need to Convert TotalCharges column to numeric if it is detected as object\n",
+    "\n",
+    "If the above `df.info` shows the \"TotalCharges\" columnn as an object, we'll need to convert it to numeric. If you have already done this during a previous exercise for \"Data Visualization with Data Refinery\", you can skip to step `2.5`."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "\n",
     "\n",
-    "### 2.5 Any NaN values should be removed to create a more accurate model. Prior examination shows NaN values for `TotalCharges`"
+    "### 2.5 Any NaN values should be removed to create a more accurate model."
    ]
   },
   {
@@ -369,6 +369,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "Understand Data Distribution¶\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3.0 Create a model"
    ]
   },
@@ -552,7 +560,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Save the model to ICP4D local Watson Machine Learning"
+    "### 4.1 Save the model to ICP4D local Watson Machine Learning\n",
+    "Replace the `username` and `password` values of `*****` with your Cloud Pak for Data `username` and `password`.\n",
+    "The value for `url` should match the `url` for your Cloud Pak for Data cluster."
    ]
   },
   {
@@ -587,7 +597,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use the desired space as the `default_space`"
+    "### Use the desired space as the `default_space`\n",
+    "Put the `GUID` of the desired space as the parameter below"
    ]
   },
   {
@@ -596,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.set.default_space('*******')"
+    "client.set.default_space('<GUID>')"
    ]
   },
   {
