Fix extra Paragraph and upper case mistakes.

--- a/notebooks/Telco-customer-churn-ICP4D.ipynb
+++ b/notebooks/Telco-customer-churn-ICP4D.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Check for need to Convert TotalCharges column to numeric if it is detected as object\n",
+    "### 2.3 Check for need to convert TotalCharges column to numeric if it is detected as object\n",
     "\n",
     "If the above `df.info` shows the \"TotalCharges\" columnn as an object, we'll need to convert it to numeric. If you have already done this during a previous exercise for \"Data Visualization with Data Refinery\", you can skip to step `2.5`."
    ]
@@ -370,7 +370,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Understand Data Distribution¶\n"
+    "Understand Data Distribution\n"
    ]
   },
   {
