Update code pattern to ICP4D v3.0

--- a/notebooks/Telco-customer-churn-ICP4D.ipynb
+++ b/notebooks/Telco-customer-churn-ICP4D.ipynb
@@ -39,7 +39,8 @@
    "source": [
     "!pip uninstall watson-machine-learning-client -y\n",
     "!pip install --user watson-machine-learning-client-v4 --upgrade | tail -n 1\n",
-    "!pip install --user pyspark==2.3.3 --upgrade|tail -n 1"
+    "!pip install --user pyspark==2.3.3 --upgrade|tail -n 1\n",
+    "!pip install --user scikit-learn==0.20.3 --upgrade|tail -n 1"
    ]
   },
   {
@@ -107,7 +108,7 @@
     "# df = data_df_1\n",
     "\n",
     "# for local upload\n",
-    "df = data_df_3"
+    "df = df_data_1"
    ]
   },
   {
@@ -234,11 +235,11 @@
    "outputs": [],
    "source": [
     "# Handle missing values for nan_column (TotalCharges)\n",
-    "from sklearn.preprocessing import Imputer\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# Find the column number for TotalCharges (starting at 0).\n",
     "total_charges_idx = df.columns.get_loc(\"TotalCharges\")\n",
-    "imputer = Imputer(missing_values=\"NaN\", strategy=\"mean\") #SimpleImputer(strategy=\"most_frequent\")\n",
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
     "\n",
     "df.iloc[:, total_charges_idx] = imputer.fit_transform(df.iloc[:, total_charges_idx].values.reshape(-1, 1))\n",
     "df.iloc[:, total_charges_idx] = pd.Series(df.iloc[:, total_charges_idx])"
@@ -679,6 +680,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color='red'><< REPLACE space_id BELOW with the id for your space. For e.g.<br/>client.set.default_space(\"6b39c537-f707-4078-9dc7-ce70b70ab22f\") >></font>**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -730,7 +738,7 @@
    "source": [
     "## 5.0 Save Test Data\n",
     "\n",
-    "We will save the test data we used to evaluate the model to our project. Although not required, this will make it easier to run batch tests later on."
+    "We will save the test data we used to evaluate the model to our project."
    ]
   },
   {
@@ -772,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
