Pin wml-client-v4 version in notebook - fix #19

--- a/examples/Telco-customer-churn-ICP4D-with-output.ipynb
+++ b/examples/Telco-customer-churn-ICP4D-with-output.ipynb
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[33mWARNING: Skipping watson-machine-learning-client as it is not installed.\u001b[0m\n",
-      "Requirement already satisfied, skipping upgrade: docutils<0.16,>=0.10 in /opt/conda/envs/Python-3.6-WMLCE/lib/python3.6/site-packages (from ibm-cos-sdk-core==2.6.0->ibm-cos-sdk==2.6.0->watson-machine-learning-client-v4) (0.14)\n",
+      "Requirement already satisfied, skipping upgrade: docutils<0.16,>=0.10 in /opt/conda/envs/Python-3.6-WMLCE/lib/python3.6/site-packages (from ibm-cos-sdk-core==2.6.0->ibm-cos-sdk==2.6.0->watson-machine-learning-client-v4==1.0.103) (0.14)\n",
       "Requirement already satisfied, skipping upgrade: py4j==0.10.7 in /home/wsuser/.local/lib/python3.6/site-packages (from pyspark==2.3.3) (0.10.7)\n",
       "Requirement already satisfied, skipping upgrade: scipy>=0.13.3 in /opt/conda/envs/Python-3.6-WMLCE/lib/python3.6/site-packages (from scikit-learn==0.20.3) (1.3.2)\n"
      ]
@@ -49,7 +49,7 @@
    ],
    "source": [
     "!pip uninstall watson-machine-learning-client -y\n",
-    "!pip install --user watson-machine-learning-client-v4 --upgrade | tail -n 1\n",
+    "!pip install --user watson-machine-learning-client-v4==1.0.103 --upgrade | tail -n 1\n",
     "!pip install --user pyspark==2.3.3 --upgrade|tail -n 1\n",
     "!pip install --user scikit-learn==0.20.3 --upgrade|tail -n 1"
    ]
@@ -716,7 +716,7 @@
        "      <td>Yes</td>\n",
        "      <td>Electronic check</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>20.2</td>\n",
+       "      <td></td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -963,7 +963,7 @@
        "       TotalCharges Churn  \n",
        "count          7043  7043  \n",
        "unique         6531     2  \n",
-       "top            20.2    No  \n",
+       "top                    No  \n",
        "freq             11  5174  \n",
        "mean            NaN   NaN  \n",
        "std             NaN   NaN  \n",
@@ -1690,10 +1690,10 @@
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f38be4c59b0>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f38be43bb38>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f38be468358>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f38be415cc0>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f76c0cfda20>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f76c0cedeb8>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f76c0c96898>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f76c0c51278>],\n",
        "      dtype=object)"
       ]
      },
@@ -1988,7 +1988,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "areaUnderROC = 0.707557\n"
+      "areaUnderROC = 0.709654\n"
      ]
     }
    ],
@@ -2165,12 +2165,12 @@
       "{\n",
       "   \"metadata\": {\n",
       "      \"name\": \"Telco Customer Churn Model\",\n",
-      "      \"guid\": \"75b0c4a3-3be0-4438-a852-7335e7a79811\",\n",
-      "      \"id\": \"75b0c4a3-3be0-4438-a852-7335e7a79811\",\n",
-      "      \"modified_at\": \"2020-06-24T15:35:04.002Z\",\n",
-      "      \"created_at\": \"2020-06-24T15:34:57.002Z\",\n",
+      "      \"guid\": \"d08a3396-3e90-42e3-a586-b469b30f26e5\",\n",
+      "      \"id\": \"d08a3396-3e90-42e3-a586-b469b30f26e5\",\n",
+      "      \"modified_at\": \"2020-06-25T12:54:51.002Z\",\n",
+      "      \"created_at\": \"2020-06-25T12:54:44.002Z\",\n",
       "      \"owner\": \"1000331001\",\n",
-      "      \"href\": \"/v4/models/75b0c4a3-3be0-4438-a852-7335e7a79811?space_id=6b39c547-f707-4078-9dc7-ce70b70ab22f\",\n",
+      "      \"href\": \"/v4/models/d08a3396-3e90-42e3-a586-b469b30f26e5?space_id=6b39c547-f707-4078-9dc7-ce70b70ab22f\",\n",
       "      \"space_id\": \"6b39c547-f707-4078-9dc7-ce70b70ab22f\"\n",
       "   },\n",
       "   \"entity\": {\n",
@@ -2321,8 +2321,8 @@
       "         \"state\": \"persisted\"\n",
       "      },\n",
       "      \"pipeline\": {\n",
-      "         \"id\": \"fb64ece3-76c0-4f77-8b92-d2e5b4bc3d52\",\n",
-      "         \"href\": \"/v4/pipelines/fb64ece3-76c0-4f77-8b92-d2e5b4bc3d52?space_id=6b39c547-f707-4078-9dc7-ce70b70ab22f\"\n",
+      "         \"id\": \"e642380c-6931-45e9-8543-f5c1d30cdd1f\",\n",
+      "         \"href\": \"/v4/pipelines/e642380c-6931-45e9-8543-f5c1d30cdd1f?space_id=6b39c547-f707-4078-9dc7-ce70b70ab22f\"\n",
       "      },\n",
       "      \"space\": {\n",
       "         \"id\": \"6b39c547-f707-4078-9dc7-ce70b70ab22f\",\n",
@@ -2359,8 +2359,7 @@
      "text": [
       "------------------------------------  --------------------------  ------------------------  ---------\n",
       "GUID                                  NAME                        CREATED                   TYPE\n",
-      "75b0c4a3-3be0-4438-a852-7335e7a79811  Telco Customer Churn Model  2020-06-24T15:34:57.002Z  mllib_2.3\n",
-      "da5323de-b4fa-4930-b162-a090230011bd  Telco Customer Churn Model  2020-06-24T15:32:38.002Z  mllib_2.3\n",
+      "d08a3396-3e90-42e3-a586-b469b30f26e5  Telco Customer Churn Model  2020-06-25T12:54:44.002Z  mllib_2.3\n",
       "------------------------------------  --------------------------  ------------------------  ---------\n",
       "----  ----  -----  -------  -------------\n",
       "GUID  NAME  STATE  CREATED  ARTIFACT_TYPE\n",
