--- a/notebooks/Telco-customer-churn-ICP4D.ipynb
+++ b/notebooks/Telco-customer-churn-ICP4D.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "!pip uninstall watson-machine-learning-client -y\n",
-    "!pip install --user watson-machine-learning-client-v4 --upgrade | tail -n 1\n",
+    "!pip install --user watson-machine-learning-client-v4==1.0.103 --upgrade | tail -n 1\n",
     "!pip install --user pyspark==2.3.3 --upgrade|tail -n 1\n",
     "!pip install --user scikit-learn==0.20.3 --upgrade|tail -n 1"
    ]
